# portwyrm

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml  container.yml  release.yml
.ssot/: registry.json  ssot.toml
.ssot/adr/: ADR-0634-proof-graph-canonical-assurance-unit.yaml  ADR-0635-proof-graph-materialization-and-certification-closure.yaml  ADR-0640-evidence-owns-proof-linkage.yaml  ADR-0641-lineage-html-open-cli-side-effect.yaml  ADR-1000-versioned-compatibility-envelope.yaml  ADR-1001-control-plane-data-plane-separation.yaml  ADR-1002-persistence-port-architecture.yaml  ADR-1003-atomic-nginx-reconciliation.yaml  ADR-1004-authentication-rbac-token-model.yaml  ADR-1005-certificate-secret-boundary.yaml  ADR-1006-npm-migration-strategy.yaml  ADR-1007-p100-release-distribution-policy.yaml  ADR-1008-no-build-operator-ui.yaml  ADR-1009-profile-scoped-api-transport.yaml  ADR-1010-operational-runtime-subsystems.yaml  ADR-1011-tier-specific-proof-artifacts.yaml  ADR-1012-isolated-acme-provider-execution.yaml  ADR-1013-container-runtime-process-supervision.yaml  ADR-1014-advanced-nginx-configuration-boundary.yaml  ADR-1015-observed-host-health-separate-from-desired-applied-state.yaml  ADR-1016-referentially-complete-npmctl-deletion.yaml
.ssot/schemas/: registry.schema.json
.ssot/specs/: SPEC-0625-claim-tier-gates.yaml  SPEC-0636-proof-graph-assurance-contract.yaml  SPEC-0637-proof-graph-materialization-and-certification-flow.yaml  SPEC-0638-feature-create-default-proof-scaffold-contract.yaml  SPEC-0640-evidence-centered-proof-link-contract.yaml  SPEC-0641-lineage-graph-html-open-flag-contract.yaml  SPEC-1000-npm-npmctl-compatibility.yaml  SPEC-1001-canonical-resource-ownership-model.yaml  SPEC-1002-identity-authentication-authorization.yaml  SPEC-1003-routing-hosts-streams-access-lists.yaml  SPEC-1004-certificate-acme-dns-lifecycle.yaml  SPEC-1005-nginx-runtime-reconciliation.yaml  SPEC-1006-persistence-export-conformance.yaml  SPEC-1007-operator-ui-experience.yaml  SPEC-1008-settings-audit-reporting-health.yaml  SPEC-1009-npm-migration-backup-cutover.yaml  SPEC-1010-oci-distribution-release-gates.yaml  SPEC-1011-proof-release-evidence-contract.yaml  SPEC-1012-container-runtime-contract.yaml  SPEC-1013-advanced-nginx-security-contract.yaml  SPEC-1014-dns-provider-plugin-contract.yaml  SPEC-1015-api-transport-security-contract.yaml  SPEC-1016-nginx-platform-operations-contract.yaml  SPEC-1017-no-build-operator-ui-contract.yaml  SPEC-1018-reverse-proxy-operational-health.yaml  SPEC-1019-npmctl-aggregate-lifecycle-closure.yaml
artifacts/: audit-table-proxy-proof-2026-07-16.md  bootstrap-password-change-2026-07-16.md  s5-closure.json  tigrbl-lifecycle-refactor-2026-07-16.md
deploy/: compose.mysql.yaml  compose.postgresql.yaml  entrypoint.py  nginx.conf
docs/architecture/: architecture.md  repository-layout.md  tigrbl-data-model.md
docs/compatibility/: npmctl-contract.md
docs/delivery/: artifact-set.md  container-publication-standard.md  release-train.md
docs/product/: delivery-slices.yaml  feature-matrix.md  product-context.md
docs/research/: name-availability.md
docs/testing/: tigrbl-proof-migration.md
docs/ux/: operator-experience.md
frontend/: index.html  package-lock.json  package.json  playwright.config.mjs  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/tests/: accessibility.spec.mjs  prepare-a11y.mjs
src/portwyrm/: __init__.py  __main__.py  errors.py  health.py  kernel_support.py  mfa.py  persistent.py  security.py  service.py  ui.py
tests/: support.py  test_package.py
tests/integration/: test_database_backends.py  test_npmctl_resource_matrix.py  test_postgresql_restart.py  test_s1_container_protocols.py
tests/planned/: test_certificates.py  test_distribution.py  test_identity.py  test_migration.py  test_npm_wire.py  test_npmctl_e2e.py  test_operations.py  test_persistence.py  test_routing.py  test_runtime.py  test_ui.py
tests/protocol/: test_disabled_proxy_host_data_plane.py
tests/robustness/: execution.json  oci_publication_execution.json  test_api_security_ui_t2.py  test_data_operations_distribution_t2.py  test_proxy_host_health_t2.py  test_routing_nginx_certificates_t2.py
tests/runtime/: container_smoke_execution.json  execution.json  operator_cli_execution.json  ssot_execution.json  test_certificates_runtime.py  test_compat_api.py  test_composed_product.py  (+25 more)
(+213 files in other folders)
