[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "portwyrm"
version = "0.1.0a0"
description = "A self-hosted, npmctl-compatible reverse proxy control plane and UI."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [{ name = "Groupsum" }]
dependencies = []
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/groupsum/portwyrm"
Repository = "https://github.com/groupsum/portwyrm"
Issues = "https://github.com/groupsum/portwyrm/issues"

[dependency-groups]
dev = [
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
  "ssot-registry>=0.2.26,<0.3",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
