[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "portwyrm"
version = "0.1.0a0"
description = "A self-hosted, npmctl-compatible reverse proxy control plane and UI."
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = "Apache-2.0"
authors = [{ name = "Groupsum" }]
dependencies = [
  "argon2-cffi>=25.1,<26",
  "cryptography>=45,<47",
  "fastapi>=0.116,<1",
  "pyjwt[crypto]>=2.10,<3",
  "pyotp>=2.9,<3",
  "uvicorn>=0.35,<1",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/groupsum/portwyrm"
Repository = "https://github.com/groupsum/portwyrm"
Issues = "https://github.com/groupsum/portwyrm/issues"

[dependency-groups]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.4,<9",
  "ruff>=0.12,<1",
  "ssot-registry>=0.2.26,<0.3",
]

[project.scripts]
portwyrm = "portwyrm.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portwyrm = ["ui/*.html", "ui/*.css", "ui/*.js"]

[tool.pytest.ini_options]
addopts = "-ra --import-mode=importlib -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
